tests/bad/arrays/5.lat
int main () {
    int[] a = new int[10];
    printInt(a);
    return 0;
}